// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser should parse a feature with a background 1`] = `
Object {
  "annotations": Array [],
  "background": Array [
    Object {
      "data": Array [],
      "keyword": "Given",
      "location": Object {
        "column": 10,
        "line": 3,
        "offset": 51,
      },
      "value": "a thing",
    },
    Object {
      "data": Array [],
      "keyword": "When",
      "location": Object {
        "column": 9,
        "line": 4,
        "offset": 69,
      },
      "value": "I do a thing",
    },
    Object {
      "data": Array [],
      "keyword": "Then",
      "location": Object {
        "column": 9,
        "line": 5,
        "offset": 92,
      },
      "value": "something happens",
    },
  ],
  "name": Object {
    "location": Object {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "value": "background steps",
  },
  "ruleDeclarations": Array [],
  "scenarios": Array [
    Object {
      "annotations": Array [],
      "name": Object {
        "location": Object {
          "column": 12,
          "line": 7,
          "offset": 125,
        },
        "value": "this is a test",
      },
      "rules": Array [
        Object {
          "data": Array [],
          "keyword": "Given",
          "location": Object {
            "column": 10,
            "line": 8,
            "offset": 151,
          },
          "value": "something",
        },
      ],
    },
  ],
}
`;

exports[`Parser should parse a feature with no newline at the end of the file 1`] = `
Object {
  "annotations": Array [],
  "background": null,
  "name": Object {
    "location": Object {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "value": "background steps",
  },
  "ruleDeclarations": Array [],
  "scenarios": Array [
    Object {
      "annotations": Array [],
      "name": Object {
        "location": Object {
          "column": 12,
          "line": 3,
          "offset": 40,
        },
        "value": "this is a test",
      },
      "rules": Array [
        Object {
          "data": Array [],
          "keyword": "Given",
          "location": Object {
            "column": 10,
            "line": 4,
            "offset": 66,
          },
          "value": "something",
        },
      ],
    },
  ],
}
`;

exports[`Parser should parse a scenario outline 1`] = `
Object {
  "annotations": Array [],
  "background": null,
  "name": Object {
    "location": Object {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "value": "foo",
  },
  "ruleDeclarations": Array [],
  "scenarios": Array [
    Object {
      "annotations": Array [],
      "name": Object {
        "location": Object {
          "column": 20,
          "line": 2,
          "offset": 33,
        },
        "value": "this is a scenario outline",
      },
      "rules": Array [
        Object {
          "keyword": "Given",
          "location": Object {
            "column": 10,
            "line": 3,
            "offset": 71,
          },
          "value": "that I have abc",
        },
        Object {
          "keyword": "When",
          "location": Object {
            "column": 9,
            "line": 4,
            "offset": 101,
          },
          "value": "I 1 2",
        },
        Object {
          "keyword": "Then",
          "location": Object {
            "column": 9,
            "line": 5,
            "offset": 120,
          },
          "value": "I -£*%",
        },
      ],
    },
  ],
}
`;

exports[`Parser should parse a scenario with annotations 1`] = `
Object {
  "annotations": Array [
    Object {
      "arguments": Array [],
      "name": "annotation1",
    },
  ],
  "background": null,
  "name": Object {
    "location": Object {
      "column": 9,
      "line": 2,
      "offset": 22,
    },
    "value": "foo",
  },
  "ruleDeclarations": Array [],
  "scenarios": Array [
    Object {
      "annotations": Array [
        Object {
          "arguments": Array [],
          "name": "annotation2",
        },
        Object {
          "arguments": Array [
            "foo",
            1,
            Array [
              true,
              false,
            ],
          ],
          "name": "annotationWithArgs",
        },
      ],
      "name": Object {
        "location": Object {
          "column": 12,
          "line": 5,
          "offset": 103,
        },
        "value": "this is a test",
      },
      "rules": Array [
        Object {
          "data": Array [],
          "keyword": "*",
          "location": Object {
            "column": 6,
            "line": 6,
            "offset": 125,
          },
          "value": "a thing",
        },
      ],
    },
  ],
}
`;

exports[`Parser should parse a scenario with data tables 1`] = `
Object {
  "annotations": Array [],
  "background": null,
  "name": Object {
    "location": Object {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "value": "data tables",
  },
  "ruleDeclarations": Array [],
  "scenarios": Array [
    Object {
      "annotations": Array [],
      "name": Object {
        "location": Object {
          "column": 12,
          "line": 2,
          "offset": 33,
        },
        "value": "data table",
      },
      "rules": Array [
        Object {
          "data": Array [
            Array [
              "datum1",
              "datum2",
            ],
            Array [
              "datum3",
              "datum4",
            ],
            Array [
              " 12 ",
              "",
            ],
          ],
          "keyword": "Given",
          "location": Object {
            "column": 10,
            "line": 3,
            "offset": 55,
          },
          "value": "I have data",
        },
      ],
    },
  ],
}
`;

exports[`Parser should parse a standard scenario 1`] = `
Object {
  "annotations": Array [],
  "background": null,
  "name": Object {
    "location": Object {
      "column": 9,
      "line": 2,
      "offset": 31,
    },
    "value": "foo",
  },
  "ruleDeclarations": Array [],
  "scenarios": Array [
    Object {
      "annotations": Array [],
      "name": Object {
        "location": Object {
          "column": 12,
          "line": 8,
          "offset": 124,
        },
        "value": "this is a test",
      },
      "rules": Array [
        Object {
          "data": Array [],
          "keyword": "Given",
          "location": Object {
            "column": 10,
            "line": 9,
            "offset": 150,
          },
          "value": "that I am testing",
        },
        Object {
          "data": Array [],
          "keyword": "And",
          "location": Object {
            "column": 8,
            "line": 10,
            "offset": 177,
          },
          "value": "I am still testing",
        },
        Object {
          "data": Array [],
          "keyword": "When",
          "location": Object {
            "column": 9,
            "line": 11,
            "offset": 206,
          },
          "value": "I test",
        },
        Object {
          "data": Array [],
          "keyword": "And",
          "location": Object {
            "column": 8,
            "line": 12,
            "offset": 222,
          },
          "value": "continue testing",
        },
        Object {
          "data": Array [],
          "keyword": "Then",
          "location": Object {
            "column": 9,
            "line": 13,
            "offset": 249,
          },
          "value": "I want to test",
        },
        Object {
          "data": Array [],
          "keyword": "And",
          "location": Object {
            "column": 8,
            "line": 14,
            "offset": 273,
          },
          "value": "test",
        },
      ],
    },
  ],
}
`;

exports[`Parser should parse declarative rules 1`] = `
Object {
  "annotations": Array [],
  "background": null,
  "name": Object {
    "location": Object {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "value": "declarative rules",
  },
  "ruleDeclarations": Array [
    Object {
      "rules": Array [
        Object {
          "data": Array [],
          "keyword": "*",
          "location": Object {
            "column": 6,
            "line": 4,
            "offset": 107,
          },
          "value": "I enter \\"<title>\\" in title",
        },
        Object {
          "data": Array [],
          "keyword": "*",
          "location": Object {
            "column": 6,
            "line": 5,
            "offset": 141,
          },
          "value": "I enter \\"<forename>\\" in forename",
        },
        Object {
          "data": Array [],
          "keyword": "*",
          "location": Object {
            "column": 6,
            "line": 6,
            "offset": 181,
          },
          "value": "I enter \\"<surname>\\" in surname",
        },
      ],
      "template": Object {
        "location": Object {
          "column": 8,
          "line": 3,
          "offset": 37,
        },
        "value": "I enter {title:word} {forename:word} {surname:word} as my name",
      },
    },
  ],
  "scenarios": Array [
    Object {
      "annotations": Array [],
      "name": Object {
        "location": Object {
          "column": 12,
          "line": 8,
          "offset": 229,
        },
        "value": "enter name",
      },
      "rules": Array [
        Object {
          "data": Array [],
          "keyword": "Given",
          "location": Object {
            "column": 10,
            "line": 9,
            "offset": 251,
          },
          "value": "I enter Mr Arthur Dent as my name",
        },
      ],
    },
  ],
}
`;
